--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: chickenknee
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: absolute baler
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.google.co.uk/search?rlz=1CAASUG_enGB767GB767&biw=2560&bih=1326&tbm=isch&sa=1&q=cool+avatars+jpg&oq=cool+avatars+jpg&gs_l=psy-ab.3...16822.19369.0.19837.4.4.0.0.0.0.61.206.4.4.0....0...1.1.64.psy-ab..0.2.104...0j0i67k1j0i8i30k1.0.Bt9AnXmanf4#imgrc=ujMlVSVnsoAJgM:
 
 #
 # Flags below are optional
